# transcript-trainer-backend

./: .pre-commit-config.yaml  main.py  pyproject.toml
app/api/: transcripts.py
app/schemas/: transcripts.py
app/services/: clozes.py  comparison.py  loaders.py  preprocessing.py
app/utils/: transcripts.py
tests/: test_clozes.py  test_loaders.py  test_transcripts.py
tests/cassettes/: test_compare_transcripts_with_url.yaml  test_fetch_transcription.yaml
